--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" type="text/css" href="styles/style.css">
     </head>
     <body>
+
+	<div class="loader"><div id="load-message" class="load-message">Loading...</div></div>
+
         <div class="footer"><a id="pause" href="#">⏯</a><br/><a id="credits-link" href="#">Credits</a> 🌷 <a href="/">Home</a></div>
         
         
