Cycling and on/off works better

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div class="loader"><div id="load-message" class="load-message">Loading...</div></div>
 
-        <div class="footer"><a id="pause" href="#">⏯</a><br/><a id="credits-link" href="#">Credits</a> 🌷 <a href="/">Home</a></div>
+        <div class="footer"><a id="pause" href="#">⏯</a><a id="cycle" href="#">🔁</a><br/><a id="credits-link" href="#">Credits</a> 🌷 <a href="/">Home</a></div>
         
         
         <div class="credits-container">
