--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div class="loader"><div id="load-message" class="load-message">Loading...</div></div>
 
-        <div class="footer"><a id="pause" href="#">⏯</a><a id="cycle" href="#">🔁</a><br/><a id="credits-link" href="#">Credits</a> 🌷 <a href="/">Home</a></div>
+        <div class="footer"><a id="on-off" href="#">On/off</a> 🌷 <a id="cycle" href="#">Cycle</a><br/><a id="credits-link" href="#">Credits</a> 🌷 <a href="/">Home</a></div>
         
         
         <div class="credits-container">
@@ -25,6 +25,7 @@
                 <h3>Credits</h3>
                 <p><a target="_blank" href="https://threejs.org">THREE.js</a> - <a href="https://mrdoob.com/">Mr.doob</a></p>
                 <p><a target="_blank" href="https://www.blender.org">Blender</a> - Blender Foundation</p>
+                <p><a target="_blank" href="https://freesound.org/people/joedeshon/sounds/119415/">Switch sound</a> - joedeshon, FreeSound</p>
                 <p>(Click or tap to close)</p>
             </div>
         </div>
