--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <div class="credits-container">
             <div class="credits">
-                <h3>Happy Mother's Day! (2019) v0.1</h3>
+                <h3>Happy Mother's Day! (2019) v<span id="version"></span></h3>
                 <p>Modeled off of <a target="_blank" href="https://www.amazon.com/DELICORE-Decorative-Illuminated-Welcome-Marquee/dp/B07J1CG3JQ">"DELICORE Decorative Illuminated MOM Marquee Word Letter Sign"</a>.</p>
                 <p>Navigation: Single tap to pan, pinch to zoom, two fingers to move left/right.</p>
                 <h3>Credits</h3>
