Removed excess lights; added debugging messages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" type="text/css" href="styles/style.css">
     </head>
     <body>
+        
+    <div class="debug">Debug</div>
 
 	<div class="loader"><div id="load-message" class="load-message">Loading...</div></div>
 
