--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 
 	<div class="loader"><div id="load-message" class="load-message">Loading...</div></div>
 
-        <div class="footer"><a id="on-off" href="#">On/off</a> 🌷 <a id="cycle" href="#">Cycle</a><br/><a id="credits-link" href="#">Credits</a> 🌷 <a href="/">Home</a></div>
+        <div class="footer">
+            <a id="hamburger-menu" href="#"><img src="images/hamburger.png"></a>
+            <a class="menu-item menu-item-hidden" id="on-off" href="#">On/off</a>
+            <a class="menu-item menu-item-hidden" id="cycle" href="#">Cycle</a>
+            <a class="menu-item menu-item-hidden" id="credits-link" href="#">Credits</a>
+            <a class="menu-item menu-item-hidden" href="/">Home</a></div>
         
         
         <div class="credits-container">
@@ -27,6 +32,7 @@
                 <h3>Credits</h3>
                 <p><a target="_blank" href="https://threejs.org">THREE.js</a> - <a href="https://mrdoob.com/">Mr.doob</a></p>
                 <p><a target="_blank" href="https://www.blender.org">Blender</a> - Blender Foundation</p>
+                <p><a target="_blank" href="https://pixabay.com/photos/nature-season-desktop-flower-3195612/">Background</a> courtesy Maja Cvetojević, Pixabay.com</p>
                 <p><a target="_blank" href="https://freesound.org/people/joedeshon/sounds/119415/">Switch sound</a> - joedeshon, FreeSound</p>
                 <p>(Click or tap to close)</p>
             </div>
